src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  font-family: 'Poppins', Inter, Avenir, Helvetica, Arial, sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  /* background-color: #242424; */

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;

  --primary-color: orange;
  --fade-primary-color: rgb(255, 165, 0, 0.08);
}

a {
  font-weight: 500;
  color: var(--primary-color);
  text-decoration: inherit;
}
a:hover {
  color: var(--primary-color);
  opacity: 0.8;
}

body {
  /* background-size: cover; */
  box-sizing: border-box;
  scroll-behavior: smooth;
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100%;
  overflow: overlay;
  /* background-image: url('../src/assets/7480152.png'); */
  /* backdrop-filter: blur(10px); */
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  border-color: var(--fade-primary-color);
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

html .date-range .rdrDayNumber span {
  color: #1d2429;
}

html.dark .date-range .rdrDayNumber span {
  color: #fff;
}

html .date-range .rdrDayDisabled .rdrDayNumber span {
  color: #aeb9bf;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
  }
  a:hover {
    color: var(--primary-color);
  }
  button {
    background-color: #f9f9f9;
    color: black;
  }
}
/* Scrollbar */
::-webkit-scrollbar {
  border-radius: 0;
  width: 8px;
  height: 8px;
}

::-webkit-scrollbar-thumb {
  border-radius: 4px;
  background-color: rgba(0, 0, 0, 0.15);
}

::-webkit-scrollbar-track {
  border-radius: 0;
  background-color: rgba(0, 0, 0, 0);
}

/* Selection */
::selection {
  color: #000;
  background: var(--primary-color);
}

/* Override CSS */

.rdrSelected,
.rdrInRange,
.rdrStartEdge,
.rdrEndEdge,
.rdrDayToday .rdrDayNumber span:after {
  background-color: var(--primary-color);
}

.rdrDateDisplayItemActive {
  border-color: var(--primary-color);
}

.fc-button-primary:hover {
  color: var(--primary-color);
  background-color: transparent;
  border-color: var(--primary-color);
}

table tr th,
table tr td {
  padding: 20px 0;
  text-align: center;
}

.fc-button-primary,
.fc-button-primary:not(:disabled):active,
.fc-button-primary:not(:disabled).fc-button-active {
  color: #fff;
  background-color: var(--primary-color);
  border-color: var(--primary-color);
}

.fc-event {
  border: 1px solid transparent;
}

